// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Modal Borrow Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-ivTmOn fTyfVC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-cxabCf TBZtj fzDISN"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-llJcti cfzvuc u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                <tr>
                  <td
                    className="sc-bZnhIo hGHUkc"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Borrow asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO kyTpVH eifDIB"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH kyTpVH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-jIZahH cAjTxQ"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                
                
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Transaction overview
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH lkBcUc"
                  >
                    <p
                      className="sc-fEOsli fqiSQU c-text--body-3 c-text--color-oxfordBlue"
                    >
                      Health factor
                    </p>
                  </td>
                  <td
                    className="sc-jIZahH jrZvoz"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-jOrMOR dAsxpi"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1,00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Borrow asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Deposit Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-ivTmOn fTyfVC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-cxabCf TBZtj fzDISN"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-llJcti cfzvuc u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                <tr>
                  <td
                    className="sc-bZnhIo hGHUkc"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Deposit asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO kyTpVH eifDIB"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH kyTpVH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-jIZahH cAjTxQ"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-kDDrLX bOqWok"
            gap={1.875}
          >
            <div
              className="sc-breuTD hPteRQ"
            >
              <p
                className="sc-fEOsli jCQRNG c-text--body-2"
              >
                Collaterization
              </p>
              <div
                className="sc-iAvgwm kWSyMz rts-toggle__container undefined"
                data-element="toggle"
                height={25}
                width={50}
              >
                <input
                  className="sc-cTQhss hPRWpT rts-toggle__toggle"
                  data-element="toggle-input"
                  type="checkbox"
                />
                <span
                  className="sc-efBctP gnXphq rts-toggle__background"
                  data-element="toggle-background"
                  height={25}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Approve to conitinue
            </button>
            <button
              appearance="secondary"
              className="sc-hKMtZM sc-jSMfEi bEgYQW ioWRiD u-full-width"
              data-element="button"
              disabled={true}
              size="large"
              variant="large"
            >
              Deposit ETH
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Modal Example 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    appearance="primary"
    className="sc-hKMtZM sc-eCYdqJ kiXBJA jriGrI"
    data-element="button"
    onClick={[Function]}
    size="medium"
    variant="medium"
  >
    Open Modal
  </button>
</div>
`;

exports[`Storyshots Components/Modal Repay Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-ivTmOn fTyfVC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-cxabCf TBZtj fzDISN"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-llJcti cfzvuc u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                <tr>
                  <td
                    className="sc-bZnhIo hGHUkc"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Repay asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO kyTpVH eifDIB"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH kyTpVH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-jIZahH cAjTxQ"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                
                
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Transaction overview
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH lkBcUc"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining debt
                    </span>
                  </td>
                  <td
                    className="sc-jIZahH jrZvoz"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-jOrMOR dAsxpi"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00 Asset
                        </span>
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          0.000001 Asset
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH lkBcUc"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-jIZahH jrZvoz"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-jOrMOR dAsxpi"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Withdraw Modal 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-ivTmOn fTyfVC"
  >
    <div
      className="o-center-layout sc-crXcEl sc-cxabCf TBZtj fzDISN"
    >
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ jKfTjM ltXRM sc-llJcti cfzvuc u-fit-content-width"
        data-element="button"
        icon="close"
        size="medium"
        variant="medium"
      />
      <div
        className="sc-evZas gpoJlf"
        gap={5}
      >
        <div
          className="sc-evZas fQdIpY"
        >
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                <tr>
                  <td
                    className="sc-bZnhIo hGHUkc"
                    colSpan={2}
                  >
                    <h2
                      className="sc-fEOsli dMYQOn c-text--heading-2 c-text--color-oxfordBlue"
                    >
                      Withdraw asset
                    </h2>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO kyTpVH eifDIB"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Amount
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH kyTpVH"
                  >
                    <div
                      className="sc-breuTD gkAgNQ"
                    >
                      <div
                        className="sc-bczRLJ ekBFnZ"
                      >
                        <div
                          className="sc-gsnTZi bhsjPj"
                        >
                          <input
                            disabled={false}
                            type="text"
                          />
                        </div>
                        
                      </div>
                      <button
                        appearance="secondary"
                        className="sc-hKMtZM sc-jSMfEi ivRYUu ioWRiD u-fit-content-width"
                        data-element="button"
                        size="small"
                        variant="thin"
                      >
                        MAX
                      </button>
                    </div>
                  </td>
                  <td
                    className="sc-jIZahH cAjTxQ"
                  >
                    <span>
                      ETH
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="sc-ezWOiH cseTil"
            data-element="tableWrapper"
          >
            <table
              className="sc-bZkfAO bGwcNz"
              data-element="table"
            >
              <thead
                className="sc-ciZhAO dpuqFH"
              >
                
                
                <tr>
                  <td
                    className="sc-jIZahH sc-himrzO lkBcUc dDMa-dg"
                  >
                    <div
                      className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
                    >
                      Transaction overview
                    </div>
                  </td>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="sc-jIZahH lkBcUc"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Remaining supply
                    </span>
                  </td>
                  <td
                    className="sc-jIZahH jrZvoz"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-jOrMOR dAsxpi"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          0.000001 Asset
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    className="sc-jIZahH lkBcUc"
                  >
                    <span
                      className="sc-fEOsli fqiSQU"
                      color="oxfordBlue"
                      type="body 3"
                    >
                      Health factor
                    </span>
                  </td>
                  <td
                    className="sc-jIZahH jrZvoz"
                  >
                    <div
                      className="sc-evZas fQdIpY"
                    >
                      <div
                        className="sc-breuTD gkAgNQ sc-jOrMOR dAsxpi"
                      >
                        <span
                          className="sc-fEOsli cVcOth"
                          color="oxfordBlue"
                          type="body 1"
                        >
                          1.00
                        </span>
                      </div>
                      <span
                        className="sc-fEOsli cVcOth"
                        color="oxfordBlue"
                        type="body 1"
                      >
                        Liquidation at &lt; 1.00
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          className="sc-kDDrLX bOqWok"
          gap={1.875}
        >
          <div
            className="sc-evZas cMVNHr"
            gap={1}
          >
            <button
              appearance="dark"
              className="sc-hKMtZM sc-gKXOVf iOviQP llhpmf u-full-width"
              data-element="button"
              size="large"
              variant="large"
            >
              Repay asset
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
